2007-07-02  Danny Backx  <dannybackx@users.sourceforge.net>
	    Pedro Alves  <pedro_alves@portugalmail.pt>

	* PipeLib.cpp (CreatePipe): Handle unexpected ActivateDevice
	failures.  Record last error as ERROR_TOO_MANY_OPEN_FILES when
	there aren't any pipe slots left.

2007-07-01  Pedro Alves  <pedro_alves@portugalmail.pt>

	* PipeDev.cpp (Write): Remove breaknext and its usage.

2007-06-30  Pedro Alves  <pedro_alves@portugalmail.pt>

	* Makefile (download): Depend on all instead of only on
	PipeDev.dll.
	* PipeLib.h (PIPELIB_API): New define.
	(CreatePipe, GetPipeName, SetPipeTag): Use PIPELIB_API.
	* PipeLib.cpp: Include windows.h earlier.
	(GetPipeName, SetPipeTag, PeekNamedPipe): Use
	PIPELIB_API.
	(CreatePipe): Use PIPELIB_API.  Comment unused parameter names.

2007-06-29  Pedro Alves  <pedro_alves@portugalmail.pt>

	* PipeLib: Delete.
	* PipeDev: Delete.

2007-06-29  Pedro Alves  <pedro_alves@portugalmail.pt>

	* PipeLib/PipeLib.cpp: Move ...
	* PipeLib.cpp: ... here.  Include PipeDev.h instead of PipeDevice.h.
	* PipeLib/PipeLib.h: Move ...
	* PipeLib.h: ... here.
	* PipeDev/Makefile: Delete.
	* Makefile (all): Add libPipeLib.a.
	(PipeLib.o, libPipeLib.a, clean-dev, clean-lib): New rules.
	(clean): Depend on clean-dev and clean-lib to do the clean work.
	(.PHONY): Add clean-dev and clean-lib.

2007-06-29  Pedro Alves  <pedro_alves@portugalmail.pt>

	* PipeDev/PipeDevice.cpp: Move ...
	* PipeDev.cpp: ... here.  Include PipeDev.h instead of PipeDevice.h.
	* PipeDev/PipeDevice.h: Move ...
	* PipeDev.h: ... here.
	* PipeDev/Makefile: Move ...
	* Makefile: ... here.
	(PipeDev_unstripped.dll): Depend on PipeDev.cpp and PipeDev.h.

2007-06-28  Pedro Alves  <pedro_alves@portugalmail.pt>

	* PipeDev/PipeDevice.cpp (RecursiveCS): New implementation.
	(LockGuard): Better split the DEBUG_LOCKS version.
	(LockGuard::LockGuard) [DEBUG_LOCKS]: Prepend a "+" to the log output.

2007-06-28  Pedro Alves  <pedro_alves@portugalmail.pt>
